<resources>
    <string name="app_name">KONI Kharkov</string>
    <string name="search_view_title">Search by part number</string>
    <string name="search_view_hint">Enter part number&#8230;</string>
    <string name="get_brand">Select brand</string>
    <string name="get_model">Select model</string>
    <string name="get_auto">Select type</string>
    <string name="selection_of_absorbers">SELECTION OF ABSORBERS IN THE CATALOG</string>
    <string name="no_internet_connection">No connection to the internet.</string>
    <string name="information_not_found">Information on the part number not found.</string>
    <string name="year">year</string>
    <string name="status">status</string>
    <string name="range">range</string>
    <string name="price">Price</string>
    <string name="install">Install</string>
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>
    <string name="copy_right" translatable="false">Copyrights © %1$d</string>
    <string name="info">About</string>
    <string name="main_page">Catalog</string>
    <string name="call_page">Call to manager</string>
    <string name="manual_page">Manual</string>
    <string name="title_call">Choice method for call</string>
    <string name="vodafone">vodafone</string>
    <string name="kyivstar">kyivstar</string>
    <string name="life">life</string>
    <string name="viber">viber</string>
    <string name="no_info">No iformation for this number</string>
    <string name="clear">Clear</string>
    <string name="favourites">Favourites</string>
    <string name="fones">Phones for call</string>
    <string name="kharkov">Kharkov</string>
    <string name="numberIsCopied">is copied</string>
    <string name="list">List</string>
    <string name="PicAddressIsCopied">Address of pictures is copied</string>
    <string name="login">Login</string>
    <string name="account">Account</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="register">Register</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
    <string name="your_price_level">Your price level: %1$s</string>
    <string name="title_activity_home">Home</string>
    <string name="title_catalog">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_more">More</string>
    <string name="title_settings">Settings</string>
    <string name="user_logo">User logo</string>

</resources>
