<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="ua.kharkov.koni.konikharkov.activityes.ui.home.HomeFragment"
        android:label="@string/title_catalog"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_manual"
        android:name="ua.kharkov.koni.konikharkov.activityes.ui.dashboard.ManualFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_manual" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="ua.kharkov.koni.konikharkov.activityes.ui.notifications.NotificationsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_notifications" />
</navigation>