<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.kharkov.koni.konikharkov.activityes.PhoneActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/title_call"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal|center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/vodafone"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/vodafone"
                app:srcCompat="@drawable/vodafone" />

            <ImageView
                android:id="@+id/kyivstar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/kyivstar"
                app:srcCompat="@drawable/kyivstar" />

            <ImageView
                android:id="@+id/life"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/life"
                app:srcCompat="@drawable/lifecell" />

            <ImageView
                android:id="@+id/viber"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_margin="15dp"
                android:contentDescription="@string/viber"
                app:srcCompat="@drawable/viber" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
